[backport to 2.x] rebase main (#1180)
* rebase main

Signed-off-by: Kaituo Li <kaituo@amazon.com>

* rebase main

Signed-off-by: Kaituo Li <kaituo@amazon.com>

---------

Signed-off-by: Kaituo Li <kaituo@amazon.com>