@@ -13,18 +13,12 @@ package org.opensearch.ad.transport;
 
 import java.io.IOException;
 import java.util.Collection;
-import java.util.List;
 
 import org.junit.Assert;
-import org.junit.Test;
 import org.mockito.Mockito;
-import org.opensearch.ad.AnomalyDetectorPlugin;
-import org.opensearch.ad.TestHelpers;
 import org.opensearch.ad.model.ADTask;
 import org.opensearch.ad.model.AnomalyDetector;
-import org.opensearch.ad.model.AnomalyDetectorJob;
 import org.opensearch.ad.model.DetectorProfile;
-import org.opensearch.ad.model.Feature;
 import org.opensearch.common.io.stream.BytesStreamOutput;
 import org.opensearch.core.common.io.stream.NamedWriteableAwareStreamInput;
 import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
@@ -33,6 +27,12 @@ import org.opensearch.core.rest.RestStatus;
 import org.opensearch.plugins.Plugin;
 import org.opensearch.test.InternalSettingsPlugin;
 import org.opensearch.test.OpenSearchSingleNodeTestCase;
+import org.opensearch.timeseries.TestHelpers;
+import org.opensearch.timeseries.TimeSeriesAnalyticsPlugin;
+import org.opensearch.timeseries.model.Feature;
+import org.opensearch.timeseries.model.Job;
+
+import com.google.common.collect.ImmutableList;
 
 /**
  * Need to extend from OpenSearchSingleNodeTestCase and override getPlugins and writeableRegistry
@@ -43,7 +43,7 @@ import org.opensearch.test.OpenSearchSingleNodeTestCase;
 public class GetAnomalyDetectorActionTests extends OpenSearchSingleNodeTestCase {
     @Override
     protected Collection<Class<? extends Plugin>> getPlugins() {
-        return pluginList(InternalSettingsPlugin.class, AnomalyDetectorPlugin.class);
+        return pluginList(InternalSettingsPlugin.class, TimeSeriesAnalyticsPlugin.class);
     }
 
     @Override
@@ -51,7 +51,6 @@ public class GetAnomalyDetectorActionTests extends OpenSearchSingleNodeTestCase 
         return getInstanceFromNode(NamedWriteableRegistry.class);
     }
 
-    @Test
     public void testGetRequest() throws IOException {
         BytesStreamOutput out = new BytesStreamOutput();
         GetAnomalyDetectorRequest request = new GetAnomalyDetectorRequest("1234", 4321, false, false, "nonempty", "", false, null);
@@ -62,12 +61,12 @@ public class GetAnomalyDetectorActionTests extends OpenSearchSingleNodeTestCase 
 
     }
 
-    @Test
     public void testGetResponse() throws Exception {
         BytesStreamOutput out = new BytesStreamOutput();
         Feature feature = TestHelpers.randomFeature(true);
-        AnomalyDetector detector = TestHelpers.randomAnomalyDetector(List.of(feature));
-        AnomalyDetectorJob detectorJob = Mockito.mock(AnomalyDetectorJob.class);
+        AnomalyDetector detector = TestHelpers.randomAnomalyDetector(ImmutableList.of(feature)); // Mockito.mock(AnomalyDetector.class);
+        Job detectorJob = Mockito.mock(Job.class);
+        // Mockito.doNothing().when(detector).writeTo(out);
         GetAnomalyDetectorResponse response = new GetAnomalyDetectorResponse(
             1234,
             "4567",
@@ -85,8 +84,9 @@ public class GetAnomalyDetectorActionTests extends OpenSearchSingleNodeTestCase 
             false
         );
         response.writeTo(out);
-
+        // StreamInput input = out.bytes().streamInput();
         NamedWriteableAwareStreamInput input = new NamedWriteableAwareStreamInput(out.bytes().streamInput(), writableRegistry());
+        // PowerMockito.whenNew(AnomalyDetector.class).withAnyArguments().thenReturn(detector);
         GetAnomalyDetectorResponse newResponse = new GetAnomalyDetectorResponse(input);
         Assert.assertNotNull(newResponse);
     }
